--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,25 @@ footer {
     width: 100%;
     bottom: 0;
 }
+
+.responsive-image {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin: 0 auto; /* 가운데 정렬 */
+}
+
+.jangtitle {
+    font-weight: bold;
+    font-size: 20px;
+    font-family: Arial;
+}
+
+.jangex {
+    font-family: Arial;
+}
+
+.jangmain {
+    min-height: 150px; /* 최소 높이 설정, 내용이 적어도 일정 높이를 유지 */
+    height: auto; /* 내용에 맞게 높이 자동 조정 */
+}
